# translateai

Translate/: main.py  pyproject.toml  requirements.txt  translator_settings.json
Translate/src/: main.py
Translate/src/core/: __init__.py  batch_processor.py  config.py  document_handler.py  language_detector.py  pdf_handler.py  quality.py  translator.py
