[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "deep-translator>=1.11.4",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "striprtf>=0.0.29",
    "odfpy>=1.4.1",
    "ttkthemes>=3.2.2"
]
